# ArmShellCode

./: ARM64_Shellcode_技术原理.md  CLion配置说明.md  CMakeLists.txt  README.md  improved_loader.cpp  minimal_test_entry.c  shellcode.ld  shellcode.ld.in  test_entry.c
include/: android_utils.h  dobby_maps_parser.h  dobby_symbol_resolver.h  elf_common.h  elf_parser.h  file_ops.h  logger.h  string_utils.h  syscall_wrapper.h
src/: dobby_maps_parser.c  dobby_symbol_resolver.c  file_ops.c  logger.c  modular_entry.c  shellcode_main_refactored.c  shellcode_manager.c  simple_test_entry.c  string_utils.c  syscall_wrapper.c
